--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body{
     gap: 100px;
     justify-content: center;
     align-items: center;
+    margin-top: 45px;
 }
 .logo{
     margin-top: 40px;
@@ -71,4 +72,119 @@ body{
     justify-content: center;
     align-items: center;
     gap: 100px;
+}
+.manage{
+    display: flex;
+    justify-content:space-evenly;
+    align-items: center;
+    gap: 150px;
+    background: #FCF0E3;
+    margin-top: 45px;
+}
+.manage-text-2{
+    border: 2px solid white;
+    background: white;
+    padding: 10px;
+}
+.manage-text-images{
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    gap: 10px;
+}
+.manage-text-1 h5{
+    color: red;
+    font-size: 1rem;
+}
+.manage-text-1 h1{
+    font-size: 2.5rem;
+}
+.manage-text-2-image-text{
+    line-height: 0px;
+}
+.built{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 150px;
+    margin-top: 45px;
+}
+.built-text h4{
+    font-size: 18px;
+    color: #5385D0;
+}
+.built-text h1{
+    font-size: 2.5rem;
+}
+.flexible{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 45px;
+    margin-top: 45px;
+}
+span{
+   font-weight: 700;
+}
+.p-text{
+    text-decoration: underline;
+    color: #3040C4;
+}
+.engage{
+    margin-top: 45px;
+    background: #EDF8FB;
+}
+.engage-text{
+    text-align: center;
+    padding: 20px;
+}
+.engage-text h1{
+    font-size: 3.5rem;
+}
+.images{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 100px;
+    margin-top: 45px;
+    background: #EDF8FB;
+    padding: 20px;
+}
+.image-3 img{
+    border: 2px solid #3040C4;
+    background:#3040C4 ;
+    width: 170px;
+    height: 170px;
+    padding: 30px;
+}
+.image-1 img{
+    border: 2px solid white;
+    background:white ;
+    width: 150px;
+    height: 170px;
+    padding: 30px;
+}
+.image-2 img{
+    border: 2px solid white;
+    background:white ;
+    width: 150px;
+    height: 170px;
+    padding: 30px;
+}
+.image-4 img{
+    border: 2px solid white;
+    background:white ;
+    width: 150px;
+    height: 170px;
+    padding: 30px;
+}
+.slider{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 100px;
+}
+.slider-image img{
+    margin-top: 250px;
 }
